--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95b478">  <td>17/08/24 17:29:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.postExample()[pri:0, instance:com.Test.TestRunner@4520ebad]">postExample</td> 
+<tr bgcolor="95b478">  <td>17/08/24 21:58:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.checkIP()[pri:0, instance:com.Test.TestRunner@4520ebad]">checkIP</td> 
+  <td>main@1967892594</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>17/08/24 21:59:01</td>   <td>2552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.postExample()[pri:0, instance:com.Test.TestRunner@4520ebad]">postExample</td> 
   <td>main@1967892594</td>   <td></td> </tr>
 </table>
