--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e46e8f">  <td>17/08/24 12:14:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.checkIP()[pri:0, instance:com.Test.TestRunner@50c87b21]">checkIP</td> 
-  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="e46e8f">  <td>17/08/24 12:14:16</td>   <td>2285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.test_NumberOfCircuits_ShouldBe_DataDriven(java.lang.String, int)[pri:0, instance:com.Test.TestRunner@50c87b21]">test_NumberOfCircuits_ShouldBe_DataDriven</td> 
-  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="e46e8f">  <td>17/08/24 12:14:16</td>   <td>2999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.test_NumberOfCircuits_ShouldBe_DataDriven(java.lang.String, int)[pri:0, instance:com.Test.TestRunner@50c87b21]">test_NumberOfCircuits_ShouldBe_DataDriven</td> 
-  <td>main@1580893732</td>   <td></td> </tr>
-<tr bgcolor="e46e8f">  <td>17/08/24 12:14:17</td>   <td>3581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.test_NumberOfCircuits_ShouldBe_DataDriven(java.lang.String, int)[pri:0, instance:com.Test.TestRunner@50c87b21]">test_NumberOfCircuits_ShouldBe_DataDriven</td> 
-  <td>main@1580893732</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>17/08/24 21:58:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.checkIP()[pri:0, instance:com.Test.TestRunner@4520ebad]">checkIP</td> 
+  <td>main@1967892594</td>   <td></td> </tr>
+<tr bgcolor="95b478">  <td>17/08/24 21:58:15</td>   <td>3239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestRunner.postExample()[pri:0, instance:com.Test.TestRunner@4520ebad]">postExample</td> 
+  <td>main@1967892594</td>   <td></td> </tr>
 </table>
